--- a/src/components/SearchResult/style.css
+++ b/src/components/SearchResult/style.css
@@ -1,7 +1,7 @@
 :root {
   --default-text-color: #adbac7;
   --info-text-color: #768390;
-  --text-muted: #373e47
+  --text-muted: #373e47;
 }
 
 .search-result {
@@ -81,4 +81,56 @@ p.fetch-error-message {
   color: var(--default-text-color);
   font-size: 24px;
   font-weight: bold;
+}
+
+/* pagination */
+.pagination {
+  display: flex;
+  padding: 0;
+  justify-content: center;
+  list-style: none;
+  cursor: pointer;
+}
+
+.pagination a {
+  padding: 1px;
+  border-radius: 5px;
+  color: var(--default-text-color);
+  font-size: 14px;
+  padding: 5px 10px;
+  margin: 0 5px;
+}
+
+.pagination__link {
+  font-weight: bold;
+}
+
+.pagination__item a:hover {
+  text-decoration: none;
+  border: 1px solid var(--text-muted);
+}
+
+.pagination__link_end a {
+  color: #539bf5;
+  text-decoration: none;
+  padding: 7px 10px;
+}
+.pagination__link_end a:hover {
+  border: 1px solid var(--text-muted);
+}
+
+.pagination__link--active a {
+  color: var(--default-text-color);
+  background: #316dca;
+}
+.pagination__link--active a:hover {
+  border: none !important;
+}
+
+.pagination__link--disabled,
+.pagination__link--disabled a {
+  color: #545d68 !important;
+  text-decoration: none !important;
+  border: none !important;
+  cursor: default;
 }
